# model

./: .gitignore  README.md  datasets.dvc  models.dvc  new_cancer_dataset.ipynb  output.html  pyproject.toml
analysis/: Bayesian Validation.ipynb  Bayesian Validation2.ipynb  Bayesian Validation3.ipynb  Bayesian Validation4.ipynb  Bayesian Validation5.ipynb  Reg Linear Cancer de Pulmão 1 - 30%.ipynb  Reg Linear Cancer de Pulmão 1 - 50%.ipynb  Reg Linear Cancer de Pulmão 1 - 80%.ipynb  Untitled.ipynb  bayesian-validation-complete.ipynb  bayesian-validation.ipynb  breast-cancer-analysis.ipynb  catboost-cross-validation-dataset-integrated.ipynb  catboost-regression-cross-validation-dataset-integrated.ipynb  catboost-regression-p@k.ipynb  data-analysis-over-integrated-dataset.ipynb  logistic-regression-lung-cancer-dataset-one-30_70_cut.ipynb  logistic-regression-lung-cancer-dataset-one-50_50_cut.ipynb  logistic-regression-lung-cancer-dataset-one-80_20_cut.ipynb  visualization-missing-data.ipynb
cancer_estimator_model/: datasets.py  io.py  main.py  metrics.py  models.py
catboost_model/: Catboost and cross validate.ipynb  Output_cancer.csv
catboost_model/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_model/catboost_info/learn/: events.out.tfevents
scripts/: data_integration.R
tests/: test_models.py
