[project]
name = "cancer-estimator-model"
version = "0.1.0"
description = "Machine learning inductive model to estimate risk of having cancer"
authors = [
    {name = "Manoel Vilela", email = "manoelnt0@gmail.com"},
    {name = "Helena Oliveira", email = "helenamesh18@gmail.com"},
    {name = "Oscar Machado", email = "oscarmachado2014@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.4.2",
    "catboost>=1.2.5",
]
requires-python = ">=3.10,<3.12"  
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.1.5",
    "pandas>=2.2.1",
    "ydata-profiling[notebook,unicode]>=4.7.0",
    "setuptools>=69.2.0",
    "openpyxl>=3.1.2",
    "dvc[gdrive]>=3.50.1",
]

[tool.pdm.scripts]
test = "pytest -vv -p no:cacheprovider --cov=nlp_tir --cov-report xml:tests/coverage.xml --cov-report term -k"
tests = {composite = ["test test", "coverage json"]}
notebook = "jupyter lab"
data-integration = "Rscript scripts/data_integration.R"

