[project]
name = "cancer-estimator-model"
version = "0.1.0"
description = "Machine learning inductive model to estimate risk of having cancer"
authors = [
    {name = "Manoel Vilela", email = "manoelnt0@gmail.com"},
    {name = "Helena Oliveira", email = "helenamesh18@gmail.com"},
    {name = "Oscar Machado", email = "oscarmachado2014@gmail.com"},
]
dependencies = [
    # https://github.com/ryukinix/catboost-no-sse4
    "catboost-no-sse4==1.2.5.2",  # custom catboost build to be lga775-compatible
    "typer>=0.12.3",
]
requires-python = ">=3.10,<3.12"  
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.mypy]
ignore_missing_imports = true

[tool.pdm.dev-dependencies]
dev = [
    "scikit-learn>=1.4.2",
    "jupyterlab>=4.1.5",
    "pandas>=2.2.1",
    "ydata-profiling[notebook,unicode]>=4.7.0",
    "setuptools>=69.2.0",
    "openpyxl>=3.1.2",
    "dvc[gdrive]>=3.50.1",
    "missingno>=0.5.2",
    "evc @ git+https://github.com/verri/evc@main",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
test = "pytest -vv -p no:cacheprovider --cov=cancer_estimator_model --cov-report term -k"
tests = {composite = ["test test"]}
notebook = "jupyter lab"
data-integration = "Rscript scripts/data_integration.R"
cancer-estimator-model = {call = "cancer_estimator_model.main:app"}


